Stops cutting off at bottom

--- a/generalSite.css
+++ b/generalSite.css
@@ -17,6 +17,7 @@ body {
 }
 
 #title_container {
+	background:transparent;
 	padding-top:70px;
 	position: absolute;
 	margin-left: auto;
@@ -26,7 +27,6 @@ body {
 }
 
 #cover_space {
-	color:white;
 	text-align:center;
 	width:100%;
 	height:300px;
@@ -52,7 +52,6 @@ body {
 }
 
 #content_space {
-	display:inline-block;
 	background-color:white;
 	padding-bottom:50px;
 	min-height:70vh;
